# last30days-skill

./: .clawhubignore  .gitignore  CHANGELOG.md  CONFIGURATION.md  HANDOFF.md  HERMES_SETUP.md  README.md  gemini-extension.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml  scorecard.yml  security.yml  validate.yml
hooks/: hooks.json
hooks/scripts/: check-config.sh
mcp/: .gitignore  README.md  go.mod
mcp/cmd/last30days-pp-mcp/: main.go
mcp/scripts/: sync-engine.sh
skills/last30days/: SKILL.md
skills/last30days/scripts/: last30days.py  setup-keychain.sh  setup-pass.sh
skills/last30days/scripts/lib/: doctor.py  dripstack.py  env.py  linkedin.py  normalize.py  pipeline.py  planner.py  render.py  rerank.py  signals.py  subproc.py
tests/: test_check_config_ytdlp_detection.py  test_chrome_cookies.py  test_cli_v3.py  test_diagnose_compat.py  test_doctor.py  test_dripstack.py  test_env_keychain.py  test_env_pass.py  test_env_v3.py  test_footer_nudge_suppression.py  test_fun_vote_weighting.py  test_hackernews.py  test_last_run_state.py  test_linkedin.py  test_perplexity.py  test_pipeline_v3.py  test_polymarket.py  test_regression.py  test_render_v3.py  test_save_raw_per_entity.py  test_setup_openclaw.py  test_subproc.py  test_youtube_backfill.py  test_youtube_yt.py
tests/hermes/: test_no_critical_scan_findings.py
